updated css to fix iframe sizing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 .Nav_bar {
   text-align: center;
   align-items: center;
+  margin: 1em;
 }
 
 .centreHeader {
